  
  
MAINTENANCE:
- Active and seated scraping now evaluates p first for efficiency.  (quiqsilver)

- As part of the pdiff implementation and tuning, I got tired of updating the table map load/save
  code in two places, and have moved this code to the CTransform class where it belongs.  A great
  deal of code was touched (more than I anticipated), so please test carefully.  (OpenHoldem)


v1.8.2 2008-04-25
NEW STUFF:
- Make CFileDialog open in the most recently accessed directory in the context of 
  file type (.whf, .tm, .dll, .pl) (jumpingfences)
  
- New type of symbols available for logging: log$YourTextGoesHere
  These symbols should make debugging formulas drastically easier.
  
  When executed, they add your specified text to the log.
  
  For example if you have:
  [ br == 2 && (nsuited == 3 || nstraight == 3) && log$ItLives ]
  in your f$rais formula and you flop a backdoor flush draw,
  then OpenHoldem will raise and also add the text "ItLives" to the log file,
  just before the RAIS line. Everytime a log$ symbol is accessed it will be flagged for logging.
  You can use this to track which part of your formula is to blame for the action taken by OH.

  Note: You want to use the log$ symbol at the end of a logic block,
  to make sure it only gets flagged when all the previous statements are true. (Strom)

- versus.bin path registry entry (jumpingfences)

BUG FIXES:
- Fixed the uXseated and uXactive regions being ignored. (Strom)

- Fixed a freezing bug that was caused by common card animations and/or occlusion. (Strom)

- Removed "scrapes to name change" and "scrapes to zero balance" from scraper preferences.  For names,
  if a good name is scraped, the name is set.  For balances, if a good number is scraped, the balance
  is set, or if "allin" or its variants are scraped, balance is set to zero.  (OpenHoldem)
  
- Userchair identification now requires 2 action buttons to be present (previously, only one needed to
  be present).  (OpenHoldem)
